# CogniGraph

./: .gitignore  CLAUDE.md  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
examples/: least_privilege_safe.yaml  manual_tool_annotations.yaml  overexposed_mcp.yaml  rag_mcp_unannotated.yaml  rag_mcp_vulnerable.yaml  runtime_trace_example.json
fixtures/: sample_fixture.yaml  sample_genai_trace.json  sample_mcp_config.json  sample_otlp_trace.json  sample_trace.json
src/cognigraph/: cli.py  export.py  report.py
src/cognigraph/collect/: __init__.py  introspect.py  mcp_config.py
src/cognigraph/fixture/: heuristics.py  loader.py  models.py
src/cognigraph/graph/: builder.py
src/cognigraph/neo4j/: client.py  queries.py
src/cognigraph/rules/: engine.py  grouping.py  mitigation.py
src/cognigraph/schemas/: edges.py  enums.py  findings.py  nodes.py
src/cognigraph/trace/: loader.py  models.py  overlay.py
src/cognigraph/trace/adapters/: __init__.py  base.py  internal_json.py  otlp_genai.py  otlp_json.py
tests/: conftest.py  mcp_stub_server.py  test_acceptance.py  test_cli.py  test_collect.py  test_edges.py  test_enums.py  test_examples.py  test_export.py  test_fixture_loader.py  test_graph_builder.py  test_grouping.py  test_introspect.py  test_mitigation.py  test_neo4j_client.py  test_neo4j_queries.py  test_nodes.py  test_otlp_genai.py  test_policy.py  test_report.py  test_rules.py  test_trace.py
