[project]
name = "cognigraph"
version = "0.1.0"
description = "Graph-native capability reachability analysis for agentic AI systems"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "networkx>=3.0",
    "neo4j>=5.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cognigraph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "neo4j: tests requiring a running Neo4j instance",
]
